fix: adjust values for proper background color on iOS devices.

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -2,6 +2,16 @@
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
+html,
+body {
+    margin: 0;
+    background: #000000;
+}
+
+body {
+    padding-top: env(safe-area-inset-top);
+}
+
 :root {
 	--wt-bg: #000000;
 	--wt-surface: #141412;
